# libgnome-volume-control

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.tests  gvc-channel-bar.c  gvc-channel-bar.h  gvc-mixer-card.c  gvc-mixer-control.c  gvc-mixer-control.h  gvc-mixer-source-output.c  gvc-mixer-stream.c  gvc-mixer-stream.h  gvc-mixer-ui-device.c  libgnome-volume-control.doap  meson.build  test-audio-device-selection.c
